<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etListingName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/listing_name_hint" />

    <EditText
        android:id="@+id/etListingPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/listing_price_hint" />

    <EditText
        android:id="@+id/etListingDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/listing_description_hint" />

    <Button
        android:id="@+id/btnUpdateListing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_listing_button" />

</LinearLayout>
